--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stan"]
 	path = stan
 	url = https://github.com/stan-dev/stan.git
+[submodule "stan2pyro/example-models"]
+	path = cmdstan/stan/example-models
+	url = https://github.com/stan-dev/example-models.git
