--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "stan2pyro/example-models"]
 	path = cmdstan/stan/example-models
 	url = https://github.com/stan-dev/example-models.git
+[submodule "example-models"]
+	path = example-models
+	url = https://github.com/stan-dev/example-models.git
